// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $200.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with two expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     expense
    s
     totalling 
    $23,410,928.18
  </h1>
</div>
`;
